Done with the first version of the draft.

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -13,6 +13,9 @@
 \usepackage{subfig}
 \usepackage[noabbrev]{cleveref} % permet d'utiliser cref and Cref
 
+\usepackage{setspace}
+\doublespacing
+
 \setlength {\textwidth}{16cm}
 \setlength {\textheight}{21cm}
 \setlength {\oddsidemargin}{0cm}
@@ -45,6 +48,8 @@ Arbitrary Polygonal Meshes}
 \author{} 
 \date{}
 \maketitle
+
+\input{abstract}
 
 \input{introduction}
 
