--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,11 +1,14 @@
 \section{Conclusions} \label{sec_conc}
-We have adapted the MIP-DSA to PieceWise Linear Discontinuous finite elements.
-This allows to use this DSA on arbitrary polygonal meshes. The advantage of
-using arbitrary polygonal mesh is the potential reduction of the numbers of
-unknowns and the possibility to use adaptive mesh refinement without have to
-treat hanging nodes. We have shown on a Fourier analysis than MIP on rectangular 
-cell is always stable. We have also shown numerical examples that MIP is efficient 
-even on highly unstructured meshes composed of different types of cell. We have also
-compared different preconditioner for CG to solve MIP. Algebraic multigrid
+We have adapted the MIP-DSA to PieceWise Linear Discontinuous finite elements
+and proposed a simple way to compute the penalty coefficient. This allows to 
+use MIP on arbitrary polygonal meshes. The advantage being the potential reduction 
+of the numbers of unknowns and the possibility to use adaptive mesh refinement 
+without having hanging nodes. We have performed two Fourier analysis of the
+new MIP-DSA on rectangular cell and shown that MIP is always stable when the
+scattering is isotropic. On three different examples, we tested MIP on highly
+unstructured meshed composed of different types of cell. We noticed that the
+efficiency of MIP does not seem to be degraded on these meshes. We have also
+compared different preconditioners for CG to solve MIP. Algebraic multigrid
 methods were found to be the best preconditioner, AGMG being up to 20 times
-faster than CG without preconditioning.
+faster than CG without preconditioning which itself was faster than CG
+preconditioned by SSOR.
